2010-11-27  François Dumont  <francois.cppdevs@free.fr>

	* include/debug/unordered_map, unordered_set (unordered_map<>::insert,
	unordered_multimap<>::insert, unordered_set<>::insert,
	unordered_multiset<>::insert) Debug check iterator hint and pass it to
	normal implementation.

2010-11-27  François Dumont  <francois.cppdevs@free.fr>

	* include/debug/bitset (bitset<>::reference): Clean code, use normal
	reference type in experimental mode.
	* testsuite/23_containers/bitset/debug/invalid/1.cc: Fix for
	experimental mode.

2010-11-26  François Dumont  <francois.cppdevs@free.fr>

	* testsuite/lib/libstdc++.exp ([check_v3_target_debug_mode]): Use
	remote_file delete for generated exe.
	([check_v3_target_profile_mode]): Add.
	* testsuite/lib/dg-options.exp ([dg-require-profile-mode]): Add
	* testsuite/ext/profile/mh.cc, profiler_algos.cc, all.cc: Use
	dg-require-profile-mode, remove explicit _GLIBCXX_PROFILE definition.

2010-11-25  François Dumont  <francois.cppdevs@free.fr>

	* src/debug.cc: Introduce a mutex pool in get_safe_base_mutex.
	Move code used to manipulate sequence safe iterators from safe
	iterator methods to safe sequence ones. Remove usage of safe iterator
	mutex, keep _Safe_iterator_base::_M_get_mutex for library backward
	binary compatibility.
	* src/Makefile.am: Build debug.cc in gnu++0x mode for _Hash_impl usage.
	* src/Makefile.in: Regenerate
	* include/debug/safe_base.h: Add _Safe_iterator_base _M_invalidate
	and _M_reset. Add _Safe_sequence_base _M_attach, _M_attach_single,
	_M_detach and _M_detach_single.
	* include/debug.safe_iterator.h, safe_iterator.tcc: Remove
	_Safe_iterator _M_invalidate and _M_invalidate_single. Implement all
	methods in terms of normal iterators rather than safe ones.
	* include/debug/safe_sequence.h: Replace _Safe_sequence
	_M_transfe_iter with _M_transfer_from_if taking the source sequence
	and a predicate signaling when a safe iterator shall be transfered.
	Add _Equal_to predicate.